[gd_scene load_steps=23 format=3 uid="uid://cydseyvrvcc8e"]

[ext_resource type="Script" uid="uid://n8pyg1g6u05c" path="res://Scene/User Interfaces/Story Mode/Dialogue Folders/Dialog System/Components/Scripts/dialog_system.gd" id="1_g2arh"]
[ext_resource type="PackedScene" uid="uid://dkgrs28nbmk1" path="res://Scene/User Interfaces/Story Mode/Dialogue Folders/Dialog System/Components/User Interface/Scenes/dialogue_interface.tscn" id="2_k1x3f"]
[ext_resource type="Texture2D" uid="uid://cdfpkjhi1gi77" path="res://Asset/User Interface/button_ui.png" id="3_jwa4o"]

[sub_resource type="Animation" id="Animation_g2arh"]
resource_name = "Fade In"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.43333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_d3gyx"]
resource_name = "Fade Out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xauy0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x68ul"]
_data = {
&"Fade In": SubResource("Animation_g2arh"),
&"Fade Out": SubResource("Animation_d3gyx"),
&"RESET": SubResource("Animation_xauy0")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k1x3f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2pu0w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g2arh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d3gyx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xauy0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bqmu6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hr4cq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uet7v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2pm4l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rlpw6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mak18"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rvpp0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i1ex1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ys12d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j5syk"]

[node name="Dialog System" type="Node2D"]
script = ExtResource("1_g2arh")

[node name="Dialog Manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 648.0

[node name="Background" type="TextureRect" parent="Dialog Manager"]
layout_mode = 0
offset_right = 1158.0
offset_bottom = 646.0

[node name="Background Animation" type="AnimationPlayer" parent="Dialog Manager/Background"]
libraries = {
&"": SubResource("AnimationLibrary_x68ul")
}

[node name="Character Manager" type="Control" parent="Dialog Manager"]
anchors_preset = 0
offset_left = -4.0
offset_right = 36.0
offset_bottom = 40.0

[node name="Dialogue Interface" parent="Dialog Manager" instance=ExtResource("2_k1x3f")]
layout_mode = 1

[node name="Invisibile Button" type="Button" parent="Dialog Manager"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1x3f")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2pu0w")
theme_override_styles/hover = SubResource("StyleBoxEmpty_g2arh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d3gyx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xauy0")

[node name="User Interface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 26.0
offset_bottom = 34.0

[node name="Hide" type="Button" parent="User Interface"]
layout_mode = 0
offset_left = 761.0
offset_top = 10.0
offset_right = 964.0
offset_bottom = 87.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_bqmu6")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hr4cq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_uet7v")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_2pm4l")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rlpw6")
text = "Hide"
icon = ExtResource("3_jwa4o")
icon_alignment = 1
expand_icon = true

[node name="Skip" type="Button" parent="User Interface"]
layout_mode = 0
offset_left = 955.0
offset_top = 7.0
offset_right = 1153.0
offset_bottom = 95.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_mak18")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rvpp0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_i1ex1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ys12d")
theme_override_styles/focus = SubResource("StyleBoxEmpty_j5syk")
text = "Skip"
icon = ExtResource("3_jwa4o")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="Dialog Manager/Invisibile Button" to="." method="_on_invisibile_button_pressed"]
[connection signal="pressed" from="User Interface/Hide" to="." method="_on_hide_pressed"]
[connection signal="pressed" from="User Interface/Skip" to="." method="_on_skip_pressed"]
